@@ -13,9 +13,7 @@
 - (id)init
 {
     [super init];
-    
     items = [[NSMutableArray alloc] init];
-    [items retain];
     
     return self;
 }
@@ -25,7 +23,6 @@
 - (NSMutableDictionary *)addItem
 {
     NSMutableDictionary *newItem = [[NSMutableDictionary alloc] init];
-    [newItem retain];
     
     [items addObject: newItem];
     return newItem;    
