@@ -14,9 +14,7 @@
 - (id)init
 {
     [super init];
-    
     items = [[NSMutableArray alloc] init];
-    [items retain];
     
     return self;
 }
