@@ -13,9 +13,7 @@
 - (id)init
 {
     [super init];
-    
     items = [[NSMutableArray alloc] init];
-    [items retain];
     
     return self;
 }
